[package]
name = "buildit-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = "0.23.1"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
futures-channel = "0.3.30"

[dev-dependencies]
tokio = { version = "1.38", features = ["macros", "rt", "rt-multi-thread", "sync", "process"] }